--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node tools/copy-webviewer-files.js"
+    "postinstall": "node tools/copy-webviewer-files.js",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.5",
+    "@angular/cli": "^12.0.4",
     "@angular/common": "^11.2.5",
     "@angular/compiler": "^11.2.5",
+    "@angular/compiler-cli": "^11.2.14",
     "@angular/core": "^11.2.5",
     "@angular/forms": "^11.2.5",
     "@angular/platform-browser": "^11.2.5",
@@ -23,14 +26,17 @@
     "@angular/router": "^11.2.5",
     "@pdftron/webviewer": "^7.0.0",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "^6.5.3",
     "tslib": "^2.0.0",
+    "typescript": "~4.0.7",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.14",
-    "@angular/cli": "~11.2.4",
-    "@angular/compiler-cli": "^11.2.5",
+    "@angular/cli": "^12.0.4",
+    "@angular/compiler-cli": "^11.2.14",
     "@angular/language-service": "^11.2.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -38,6 +44,7 @@
     "btoa": "^1.2.1",
     "codelyzer": "^6.0.0",
     "download": "^7.1.0",
+    "enhanced-resolve": "^3.3.0",
     "fs-extra": "^7.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -50,5 +57,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.7"
+  },
+  "engines": {
+    "node": "12.22.1",
+    "npm": "6.14.12"
   }
 }
