--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node server.js",
+    "start": "ng build && node server.js",
     "build": "ng build",
     "build-prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --configuration production",
-    "heroku-postbuild": "ng build --prod" 
+    "preinstall": "npm install -g @angular/cli",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
