--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "preinstall": "npm install -g @angular/cli",
-    "heroku-postbuild": "ng build --aot --prod"
+    "postinstall": "ng build --aot=prod"
   },
   "private": true,
   "dependencies": {
