--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "npm install -g @angular/cli",
-    "postinstall": "ng build --aot=prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
